--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,8 @@ input:focus { outline: none; }
 body{
   font-family: 'Phantom Sans', sans-serif;
 }
+
+/* img {
+  max-width: 400px;
+  max-height: 400px;
+} */
